Functional checkbox form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,24 +53,24 @@
                         <div class="dropdown dropdown-lg">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
                             <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                <form class="form-horizontal" role="form">
+                                <form class="form-horizontal" role="form" method="get">
                                   <div class="checkbox">
-                                    <label><input id="cat_ap" type="checkbox" value="Apartments">Apartments</label>
+                                    <label><input name="cat_ap[]" type="checkbox" value="Apartments">Apartments</label>
                                   </div>
                                   <div class="checkbox">
-                                    <label><input id="cat_ap" type="checkbox" value="Houses">Houses</label>
+                                    <label><input name="cat_ap[]" type="checkbox" value="Houses">Houses</label>
                                   </div>
-                                  <div class="checkbox disabled">
-                                    <label><input id="cat_ap" type="checkbox" value="Villas">Villas</label>
+                                  <div class="checkbox">
+                                    <label><input name="cat_ap[]" type="checkbox" value="Villas">Villas</label>
                                   </div>
-                                  <div class="checkbox disabled">
-                                    <label><input type="checkbox" value="Manors">Manors</label>
+                                  <div class="checkbox">
+                                    <label><input name="cat_ap[]" type="checkbox" value="Manors">Manors</label>
                                   </div>
-                                  <div class="checkbox disabled">
-                                    <label><input type="checkbox" value="Castles">Castles</label>
+                                  <div class="checkbox">
+                                    <label><input name="cat_ap[]" type="checkbox" value="Castles">Castles</label>
                                   </div>
-                                  <div class="checkbox disabled">
-                                    <label><input type="checkbox" value="Cottages">Cottages</label>
+                                  <div class="checkbox">
+                                    <label><input name="cat_ap[]" type="checkbox" value="Cottages">Cottages</label>
                                   </div>
                                 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                                 </form>
